# pathstitch

./: .gitignore  Issues.md  README.md  assembly_workflow.md  issues2.md  unfold.md  vertex
Marketing/: Pathstitch-Launch-Playbook.md
Pathstitch/DxfPreviewer/: DxfParser.swift  DxfPreviewShared.swift  Info.plist  PreviewProvider.swift  StepPreviewShared.swift
Pathstitch/Pathstitch/: ContentView.swift  HelpView.swift  Info.plist  PathstitchApp.swift  PreferencesWindow.swift  SearchPalette.swift
Pathstitch/Pathstitch.xcodeproj/: project.pbxproj
Pathstitch/Pathstitch/App/: AboutWindow.swift  AppState.swift  HardwareLibrary.swift  Keybinds.swift  LeatherLibrary.swift  OffsetGeometry.swift  ToolbarItemViews.swift  ToolbarLayout.swift
Pathstitch/Pathstitch/Bridge/: PythonBridge.swift
Pathstitch/Pathstitch/Design/: DesignTokens.swift  ToolOptionsKit.swift
Pathstitch/Pathstitch/Resources/: hardware.json  leathers.json
Pathstitch/PathstitchThumbnail/: DxfPreviewShared.swift  Info.plist  StepPreviewShared.swift  ThumbnailProvider.swift
native/step_mesh/: Cargo.toml  build.sh
native/step_mesh/include/: StepMesh-Bridging.h  step_mesh.h
native/step_mesh/src/: lib.rs
pathstitch_core/: construct_ops.py  dxf_ops.py  jig_ops.py  net_unfold.py  plugins.py  step_ops.py  surface_unfold.py  test_construct_ops.py  test_dxf_ops.py  test_explode.py  test_hardware_ops.py  test_holes_quality.py  test_jig_ops.py  test_leather_ops.py  test_mesh_imports.py  test_plugins.py  test_unfold_full.py  worker.py
scripts/: package_app.sh
scripts/dmg/: README.md
(+16 files in other folders)
